// $Id: CHANGELOG.txt,v 1.173.2.7 2010/09/25 16:07:50 alexb Exp $

Feeds 6.x 1.0 xxxxxxxxxxxxxxxxxx
--------------------------------

- #916962 alex_b: Fix undefined feeds_reschedule() when upgrading.
- #919172 andrewlevine, alex_b: Fix enclosure source files deleted.
- Fix emfield mapper not handling single values properly.
- Fix emfield mapper not accepting FeedsElement objects.

Feeds 6.x 1.0 Beta 7, 2010-09-17
--------------------------------

- #914692: Fix calltime pass-by-reference errors.

Feeds 6.x 1.0 Beta 6, 2010-09-16
--------------------------------

- Branched to DRUPAL-6--1.
- #623432 Alex UA, dixon_, pvhee, cglusky, alex_b et al.: Mapper for emfield.
- #913672 andrewlevine: Break out CSV Parser into submethods so it is more
  easily overridable
- #853974 snoldak924, alex_b: Fix XSS vulnerabilities in module.
- #887846 ekes: Make FeedsSimplePieEnclosure (un)serialization safe.
- #908582 XiaN Vizjereij, alex_b: Fix "Cannot use object of type stdClass as
  array" error in mappers/taxonomy.inc.
- #906654 alex_b: Fix phantom subscriptions.
- #867892 alex_b: PubSubHubbub - slow down import frequency of feeds that are
  subscribed to hub.
- #908964 alex_b: Break out scheduler. Note: Features depends on Job Scheduler
  module now: http://drupal.org/project/job_scheduler
- #663860 funkmasterjones, infojunkie, alex_b et. al.: hook_feeds_after_parse().
- #755556 Monkey Master, andrewlevine, alex_b: Support saving local files in
  filefields.
- #891982 bangpound, twistor: Support Link 2.x.
- #870278 budda: Fix SQL query in taxonomy_get_term_by_name_vid().
- #795114 budda, alex_b: Taxonomy term processor doesn't require vocabulary to
  be set.

Feeds 6.x 1.0 Beta 5, 2010-09-10
--------------------------------

- #849840 adityakg, rbayliss, alex_b: Submit full mapping on every submission.
- #849834 rbayliss, alex_b: Generalize feeds_config_form() to feeds_form().
- #907064 alex_b: Track imported terms.
- #906720 alex_b: Introduce a hook_feeds_after_clear().